test/bad/classes/method06.px

class Test def
    func f() def
        skip

f()
